refactor: recreate the framework & format code

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{ .Site.Title }}</title>
-</head>
+  {{ partial "head.html" . }}
 <body>
   {{ partial "header.html" . }}
   <div class="page_not_found">
