--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,28 @@
-<div class="header">
-  <h2>header</h2>
+<!-- site header, including title & nav-bar -->
+
+<style type="text/css">
+  .nav-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+</style>
+
+<div id="header">
+  <div class="title">
+    <h1>
+      <a href="{{ .Site.BaseURL }}">
+        <span>{{ .Site.Title }}</span>
+      </a>
+    </h1>
+    </h1>
+  </div>
+
+  <div class="nav-bar">
+    {{ range .Site.Menus.main }}
+    <div class="nav-bar-item">
+      <a href="{{ .URL | safeURL }}">{{ .Name }}</a>
+    </div>
+    {{ end }}
+  </div>
 </div>
