--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,25 @@
+<style>
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+</style>
+
 <footer>
-  <h2>footer</h2>
+  <div class="copyright">
+    <span>© 2019</span> - <span>{{ now.Format "2006"}} 🍦</span>
+  </div>
+
+  <div class="foot_slogan">
+    <span>{{ .Site.Params.footer_slogan }}</span>
+  </div>
+
+  <div class="theme_info">
+    <span>Powered by </span>
+    <a href="https://gohugo.io/">Hugo</a>
+    <span> 🍧 Theme </span>
+    <a href="https://github.com/queensferryme/hugo-theme-cocodayo/">Cocodayo</a>
+  </div>
 </footer>
