feat(posts): add post meta info & summary in post list

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <!-- site header, including title & nav-bar -->
 
 <style type="text/css">
-  .nav-bar {
+  #header .nav-bar {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
