--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
-  {{ partial "head.html" . }}
+{{ partial "head.html" . }}
+
 <body>
   {{ partial "header.html" . }}
-  <div class="postslist">
-    <h1>posts list</h1>
+  <div id="posts-list">
+    <h1>Posts</h1>
     {{ range .Data.Pages }}
-      <h2><a href={{ .Permalink }}>{{ .Title }}</a></h2>
+    <h2 class="post-title">
+      <a href="{{ .Permalink }}">{{ .Title }}</a>
+    </h2>
+    <div class="post-info">
+      <span class="post-publish-date">
+        <b>publish: </b>{{ .PublishDate.Format "2006-01-02" }}
+      </span>
+      <span class="post-lastmod-date">
+        <b>last modified: </b>{{ .Lastmod.Format "2006-01-02" }}
+      </span>
+      <span class="post-word-count">
+        <b>word count: </b>{{ .WordCount }}
+      </span>
+      <span class="post-read-time">
+        <b>read time: </b>{{ .ReadingTime }} min
+      </span>
+    </div>
+    <div class="post-excerpt">{{ .Summary }}</div>
     {{ end }}
   </div>
   {{ partial "footer.html" . }}
 </body>
+
 </html>
