--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -2,29 +2,55 @@
 <html lang="zh-cn">
 {{ partial "head.html" . }}
 
+<style type="text/css">
+  .post-categories span+span::before {
+    content: "/ ";
+  }
+
+  .post-tags span+span::before {
+    content: ", ";
+  }
+</style>
+
 <body>
   {{ partial "header.html" . }}
+  <h1>Posts</h1>
   <div id="posts-list">
-    <h1>Posts</h1>
     {{ range .Data.Pages }}
-    <h2 class="post-title">
-      <a href="{{ .Permalink }}">{{ .Title }}</a>
-    </h2>
-    <div class="post-info">
-      <span class="post-publish-date">
-        <b>publish: </b>{{ .PublishDate.Format "2006-01-02" }}
-      </span>
-      <span class="post-lastmod-date">
-        <b>last modified: </b>{{ .Lastmod.Format "2006-01-02" }}
-      </span>
-      <span class="post-word-count">
-        <b>word count: </b>{{ .WordCount }}
-      </span>
-      <span class="post-read-time">
-        <b>read time: </b>{{ .ReadingTime }} min
-      </span>
+    <div class="post-container">
+      <h2 class="post-title">
+        <a href="{{ .Permalink }}">{{ .Title }}</a>
+      </h2>
+      <div class="post-meta-info">
+        <span class="post-publish-date">
+          <b>publish: </b>{{ .PublishDate.Format "2006-01-02" }}
+        </span>
+        <span class="post-lastmod-date">
+          <b>last modified: </b>{{ .Lastmod.Format "2006-01-02" }}
+        </span>
+        <span class="post-word-count">
+          <b>word count: </b>{{ .WordCount }}
+        </span>
+        <span class="post-read-time">
+          <b>read time: </b>{{ .ReadingTime }} min
+        </span>
+      </div>
+      <div class="post-excerpt">{{ .Summary }}</div>
+      <div class="post-taxonomy-info">
+        <div class="post-categories">
+          <b>categories: </b>
+          {{ range .Params.categories }}
+          <span>{{ . }}</span>
+          {{ end }}
+        </div>
+        <div class="post-tags">
+          <b>tags: </b>
+          {{ range .Params.tags }}
+          <span>#{{ . }}</span>
+          {{ end }}
+        </div>
+      </div>
     </div>
-    <div class="post-excerpt">{{ .Summary }}</div>
     {{ end }}
   </div>
   {{ partial "footer.html" . }}
