chore(layout): use id #header, #main, #footer in all templates

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,7 +2,7 @@
   {{ partial "head.html" . }}
 <body>
   {{ partial "header.html" . }}
-  <div class="page_not_found">
+  <div id="main" class="page_not_found">
     <p>404 page not found</p>
   </div>
   {{ partial "footer.html" .}}
