--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,7 +22,7 @@
 
 <body>
   {{ partial "header.html" . }}
-  <div class="homepage">
+  <div id="main" class="index">
     <h1>{{ .Site.Params.index_slogan }}</h1>
     <div class="avatar">
       <img src="{{ .Site.Params.avatar_url }}" alt="avatar">
