--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,7 @@
   }
 </style>
 
-<footer>
+<footer id="footer">
   <div class="copyright">
     <span>© 2019</span> - <span>{{ now.Format "2006"}} 🍦</span>
   </div>
