--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -4,7 +4,7 @@
 
 <body>
   {{ partial "header.html" . }}
-  <div id="post-article">
+  <div id="main" class="post">
     <div class="post-toc">
       {{ .TableOfContents }}
     </div>
