--- a/layouts/other/about.html
+++ b/layouts/other/about.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
-  {{ partial "head.html" . }}
+{{ partial "head.html" . }}
+
 <body>
   {{ partial "header.html" . }}
-  <div class="content">
+  <div id="main" class="about">
     {{ .Content }}
   </div>
   {{ partial "footer.html" . }}
 </body>
+
 </html>
