--- a/layouts/other/archive.html
+++ b/layouts/other/archive.html
@@ -1,1 +1,13 @@
-qwer
+<!DOCTYPE html>
+<html lang="zh-cn">
+{{ partial "head.html" . }}
+
+<body>
+  {{ partial "header.html" . }}
+  <div id="main" class="archive">
+    archive
+  </div>
+  {{ partial "footer.html" . }}
+</body>
+
+</html>
