--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,3 @@
-<!-- site header, including title & nav-bar -->
-
 <style type="text/css">
   #header .nav-bar {
     display: flex;
@@ -8,7 +6,7 @@
   }
 </style>
 
-<div id="header">
+<header id="header">
   <div class="title">
     <h1>
       <a href="{{ .Site.BaseURL }}">
@@ -24,4 +22,4 @@
     </div>
     {{ end }}
   </div>
-</div>
+</header>
