chore(exampleSite & layout): update about & archive pages

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 {{ partial "head.html" . }}
 <style>
-  .homepage {
+  .index {
     display: flex;
     justify-content: center;
     align-items: center;
