chore(footer & index): add safeHTML tag for slogan

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,7 +23,7 @@
 <body>
   {{ partial "header.html" . }}
   <div id="main" class="index">
-    <h1>{{ .Site.Params.index_slogan }}</h1>
+    {{ .Site.Params.index_slogan | safeHTML }}
     <div class="avatar">
       <img src="{{ .Site.Params.avatar_url }}" alt="avatar">
     </div>
