--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,7 +13,7 @@
   </div>
 
   <div class="foot_slogan">
-    <span>{{ .Site.Params.footer_slogan }}</span>
+    <span>{{ .Site.Params.footer_slogan | safeHTML }}</span>
   </div>
 
   <div class="theme_info">
