--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,5 +2,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <!-- author -->
+  <meta name="author" content={{ .Site.Author.name }}>
+
+  <!-- description -->
+  {{ if .Description }}
+  <meta name="description" content={{ .Description }}>
+  {{ else if and .IsPage .Summary }}
+  <meta name="description" content={{ .Summary }}>
+  {{ else }}
+  <meta name="description" content={{ .Site.Params.description }}>
+  {{ end }}
+
+  <!-- keywords -->
+  {{ if .Keywords }}
+  <meta name="keywords" content="{{ range $key, $value := .Keywords }} {{ $value }} {{ end }}">
+  {{ else }}
+  <meta name="keywords" content="{{ range $key, $value := .Site.Params.keywords }} {{ $value }} {{ end }}">
+  {{ end }}
+
+  <!-- favicon -->
+
+  <!-- permalink -->
+  <link rel="canonical" href={{ .Permalink }}>
+
+  <!-- static files -->
+  <link rel="stylesheet" href={{ "css/Cocodayo.css" | absURL }}>
+
+  <!-- site title -->
+  {{ if .IsHome }}
+  <title>{{ .Site.Title }}</title>
+  {{ else }}
   <title>{{ .Title }} - {{ .Site.Title }}</title>
+  {{ end }}
 </head>
