--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-  {{ partial "head.html" . }}
+{{ partial "head.html" . }}
+
 <body>
-  {{ partial "header.html" . }}
-  <div id="main" class="page_not_found">
-    <p>404 page not found</p>
+  <div id="wrapper">
+    {{ partial "header.html" . }}
+    <div id="main" class="page_not_found">
+      <p>404 page not found</p>
+    </div>
+    {{ partial "footer.html" .}}
   </div>
-  {{ partial "footer.html" .}}
 </body>
+
 </html>
