--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -3,11 +3,13 @@
 {{ partial "head.html" . }}
 
 <body>
-  {{ partial "header.html" . }}
-  <div id="main" class="about">
-    {{ .Content }}
+  <div id="wrapper">
+    {{ partial "header.html" . }}
+    <div id="main" class="about">
+      {{ .Content }}
+    </div>
+    {{ partial "footer.html" . }}
   </div>
-  {{ partial "footer.html" . }}
 </body>
 
 </html>
