--- a/layouts/tags/list.html
+++ b/layouts/tags/list.html
@@ -3,20 +3,22 @@
 {{ partial "head.html" . }}
 
 <body>
-  {{ partial "header.html" . }}
-  <div id="main">
-    <ul>
-      {{ range .Data.Pages }}
-      <li>
-        <div class="post-item">
-          <a href={{ .RelPermalink }}>{{ .Title }}</a>
-          <span class="post-publish-date">{{ .PublishDate.Format "2006-01-02" }}</span>
-        </div>
-      </li>
-      {{ end }}
-    </ul>
+  <div id="wrapper">
+    {{ partial "header.html" . }}
+    <div id="main">
+      <ul>
+        {{ range .Data.Pages }}
+        <li>
+          <div class="post-item">
+            <a href={{ .RelPermalink }}>{{ .Title }}</a>
+            <span class="post-publish-date">{{ .PublishDate.Format "2006-01-02" }}</span>
+          </div>
+        </li>
+        {{ end }}
+      </ul>
+    </div>
+    {{ partial "footer.html" . }}
   </div>
-  {{ partial "footer.html" . }}
 </body>
 
 </html>
