--- a/layouts/tags/terms.html
+++ b/layouts/tags/terms.html
@@ -3,15 +3,17 @@
 {{ partial "head.html" . }}
 
 <body>
-  {{ partial "header.html" . }}
-  <div id="main">
-    <ul>
-      {{ range .Site.Taxonomies.tags }}
-      <li><a href="{{ .Page.Permalink }}">{{ .Page.Title }}</a> {{ .Count }}</li>
-      {{ end }}
-    </ul>
+  <div id="wrapper">
+    {{ partial "header.html" . }}
+    <div id="main">
+      <ul>
+        {{ range .Site.Taxonomies.tags }}
+        <li><a href="{{ .Page.Permalink }}">{{ .Page.Title }}</a> {{ .Count }}</li>
+        {{ end }}
+      </ul>
+    </div>
+    {{ partial "footer.html" . }}
   </div>
-  {{ partial "footer.html" . }}
 </body>
 
 </html>
