--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,7 @@
 /* global styles */
 * {
   box-sizing: border-box;
+  color: #3A353F;
   margin: 0;
   padding: 0;
 }
@@ -11,59 +12,47 @@ a {
 }
 
 body {
-  margin: 0 auto;
-  max-width: 1440px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 .link {
-  box-shadow: inset 0 -3px 0 #208020;
+  box-shadow: inset 0 -3px 0 #C05850;
   display: inline-block;
   transition: box-shadow .1s;
 }
 
 .link:hover {
-  box-shadow: inset 0 -6px 0 #208020;
+  box-shadow: inset 0 -6px 0 #C05850;
+}
+
+#wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0 auto;
+  max-width: 1024px;
+  min-height: 100vh;
+}
+
+#main {
+  flex: 1 0 auto;
 }
 
 /* header styles */
+#header {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
 #header > .title {
   font-size: 2rem;
 }
 
-#header > .nav-bar > .nav-bar-item > a {
+#header > .nav-bar > .nav-bar-item {
   font-size: 1rem;
-}
-
-@media screen and (min-width: 512px) {
-  #header {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 1rem 3rem;
-  }
-
-  #header > .nav-bar > .nav-bar-item a {
-    margin-left: 4rem;
-  }
-}
-
-@media screen and (max-width: 512px) {
-  #header {
-    display: block;
-    margin-bottom: .7rem;
-  }
-
-  #header > .title {
-    margin: .7rem 0;
-    text-align: center;
-  }
-
-  #header > .nav-bar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-  }
+  margin-left: 1.5rem;
 }
