chore: rename to Verse

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -20,6 +20,6 @@
     <span>Powered by </span>
     <a href="https://gohugo.io/">Hugo</a>
     <span> 🍧 Theme </span>
-    <a href="https://github.com/queensferryme/hugo-theme-cocodayo/">Cocodayo</a>
+    <a href="https://github.com/queensferryme/hugo-theme-verse">Verse</a>
   </div>
 </footer>
