feat(footer): change font size of footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,19 @@
 <style>
-  footer {
+  #footer {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    font-size: small;
+  }
+
+  #footer a {
+    color: #a6a6a6;
+    transition: all 0.2s linear;
+  }
+
+  #footer a:hover {
+    color: #263238;
   }
 </style>
 
