--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,16 +1,16 @@
 <footer id="footer">
   <div class="copyright">
-    <span>© 2019</span> - <span>{{ now.Format "2006"}} 🍦</span>
+    <span>© 2019</span> - <span>{{ now.Format "2006"}}</span>
   </div>
 
-  <div class="foot_slogan">
-    <span>{{ .Site.Params.footer_slogan | safeHTML }}</span>
+  <div class="footnote">
+    <span>{{ .Site.Params.footnote | safeHTML }}</span>
   </div>
 
   <div class="theme_info">
     <span>Powered by </span>
-    <a href="https://gohugo.io/">Hugo</a>
-    <span> 🍧 Theme </span>
-    <a href="https://github.com/queensferryme/hugo-theme-verse">Verse</a>
+    <a class="link" href="https://gohugo.io/">Hugo</a>
+    <span> 🍦 Theme </span>
+    <a class="link" href="https://github.com/queensferryme/hugo-theme-verse">Verse</a>
   </div>
 </footer>
