--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -28,7 +28,7 @@
   <link rel="canonical" href="{{ .Permalink }}">
 
   <!-- static files -->
-  <link rel="stylesheet" href='{{ "css/main.css" | absURL }}'>
+  <link rel="stylesheet" href='{{ "css/common.css" | absURL }}'>
 
   <!-- site title -->
   {{ if .IsHome }}
