--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,6 @@
 <header id="header">
   <h1 class="title">
-    <a href="{{ .Site.BaseURL }}">
-      <span>{{ .Site.Title }}</span>
-    </a>
+    <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
   </h1>
 
   <div class="nav-bar">
