refactor: rename to TeXify, major changes in design and architecture etc.

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,16 +1,16 @@
 <footer id="footer">
-  <div class="copyright">
+  <div>
     <span>© 2019</span> - <span>{{ now.Format "2006"}}</span>
   </div>
 
-  <div class="footnote">
-    <span>{{ .Site.Params.footnote | safeHTML }}</span>
-  </div>
-
-  <div class="theme_info">
+  <div>
     <span>Powered by </span>
     <a class="link" href="https://gohugo.io/">Hugo</a>
     <span> 🍦 Theme </span>
-    <a class="link" href="https://github.com/queensferryme/hugo-theme-verse">Verse</a>
+    <a class="link" href="https://github.com/queensferryme/hugo-theme-texify">TeXify</a>
+  </div>
+
+  <div>
+    <span>{{ .Site.Params.footnote | safeHTML }}</span>
   </div>
 </footer>
