feat: add disqus support

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -37,6 +37,9 @@
       <a></a>
       {{ end }}
     </div>
+    <div class="comment">
+      {{ template "_internal/disqus.html" . }}
+    </div>
     {{ end }}
   </main>
   {{ partial "footer.html" . }}
