fix: custom css & other minor ui fixes

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,7 +10,7 @@
     <a class="link" href="https://github.com/queensferryme/hugo-theme-texify">TeXify</a>
   </div>
 
-  <div>
+  <div class="footnote">
     <span>{{ .Site.Params.footnote | safeHTML }}</span>
   </div>
 </footer>
