--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -46,4 +46,8 @@
   {{ if .Site.Params.enable_mathjax }}
   {{ partial "mathjax.html" . }}
   {{ end }}
+
+  {{ range .Site.Params.custom_css }}
+    <link rel="stylesheet" href="{{ . | absURL }}" />
+  {{ end }}
 </head>
