--- a/static/css/content.css
+++ b/static/css/content.css
@@ -68,6 +68,7 @@
     background-color: #F5F5F5;
     border-radius: .2rem;
     font-family: 'Latin Modern Mono', Courier, monospace;
+    margin-top: .5rem;
     overflow-x: auto;
     padding: .5rem;
 }
@@ -77,7 +78,7 @@
 }
 
 .content td, .content th {
-    border: #575c61 1px solid;
+    border: #575C61 1px solid;
     padding: .1rem .5rem;
 }
 
